final submission with link, improvements made in output charts and results

--- a/loan_model.ipynb
+++ b/loan_model.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -251,8 +251,7 @@
         "# from fairlearn.postprocessing import ThresholdOptimizer\n",
         "\n",
         "\n",
-        "# df = pd.read_csv(\"/content/sample_data/loan_access_dataset.csv\", encoding='latin1')\n",
-        "df = pd.read_csv(\"/Users/cybernest/Downloads/loan_access_dataset.csv\", encoding='latin1')\n",
+        "df = pd.read_csv(\"/content/sample_data/loan_access_dataset.csv\", encoding='latin1')\n",
         "df['Loan_Approved'] = df['Loan_Approved'].map({'Approved':1, 'Denied':0})\n",
         "df=df.drop(columns=['ID'])\n",
         "df.head()\n"
@@ -710,7 +709,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 3. SNAP analysis and Feature Selection"
+        "# 3. SHAP analysis and Feature Selection"
       ]
     },
     {
@@ -755,7 +754,7 @@
         "others = X.select_dtypes(include='object').columns.tolist()\n",
         "X = pd.get_dummies(X, columns=others, drop_first=True)\n",
         "\n",
-        "# Impute missing with KNN instead of mean\n",
+        "# Impute missing with KNN instead of mean to reflect relationships in credit score, income, etc.\n",
         "imputer = KNNImputer(n_neighbors=5)\n",
         "X_imp = pd.DataFrame(imputer.fit_transform(X), columns=X.columns)\n",
         "\n",
@@ -1011,7 +1010,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Cross-check SNAP. This is scenatio based audits. Who is being disadvantaged?"
+        "Cross-check SNAP and Correlation Heatmap (deleted). This is scenatio based audits. Who is being disadvantaged? Can I spot influences across data?"
       ]
     },
     {
@@ -1540,7 +1539,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "roughly normal distribution. AUC of 0.6777 shows the model can ~reasonably distinguish the applicants loan approval status but being close to 0.5 shows it is essentially guessing in imbalanced data"
+        "roughly normal distribution. AUC of 0.6777 shows the model can ~reasonably distinguish the applicants loan approval status"
       ]
     },
     {
@@ -1614,128 +1613,6 @@
       "metadata": {},
       "source": [
         "Disability_Status and Criminal_Record exhibit very high DI, with privileged groups being approved over 2–2.8x more often, violating fairness thresholds. The rest lie within 0.8 to 1.25 rule so generally acceptable."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 3,
-      "metadata": {
-        "id": "oRFF8Q8b6TO0"
-      },
-      "outputs": [
-        {
-          "data": {
-            "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-              "columns": [
-                {
-                  "name": "index",
-                  "rawType": "object",
-                  "type": "string"
-                },
-                {
-                  "name": "0",
-                  "rawType": "int64",
-                  "type": "integer"
-                }
-              ],
-              "ref": "cb9d3e3a-08a6-4581-8a50-ae04d68287e8",
-              "rows": [
-                [
-                  "ID",
-                  "0"
-                ],
-                [
-                  "Gender",
-                  "0"
-                ],
-                [
-                  "Race",
-                  "0"
-                ],
-                [
-                  "Age",
-                  "0"
-                ],
-                [
-                  "Age_Group",
-                  "0"
-                ],
-                [
-                  "Income",
-                  "0"
-                ],
-                [
-                  "Credit_Score",
-                  "0"
-                ],
-                [
-                  "Loan_Amount",
-                  "0"
-                ],
-                [
-                  "Employment_Type",
-                  "0"
-                ],
-                [
-                  "Education_Level",
-                  "0"
-                ],
-                [
-                  "Citizenship_Status",
-                  "0"
-                ],
-                [
-                  "Language_Proficiency",
-                  "0"
-                ],
-                [
-                  "Disability_Status",
-                  "0"
-                ],
-                [
-                  "Criminal_Record",
-                  "0"
-                ],
-                [
-                  "Zip_Code_Group",
-                  "0"
-                ]
-              ],
-              "shape": {
-                "columns": 1,
-                "rows": 15
-              }
-            },
-            "text/plain": [
-              "ID                      0\n",
-              "Gender                  0\n",
-              "Race                    0\n",
-              "Age                     0\n",
-              "Age_Group               0\n",
-              "Income                  0\n",
-              "Credit_Score            0\n",
-              "Loan_Amount             0\n",
-              "Employment_Type         0\n",
-              "Education_Level         0\n",
-              "Citizenship_Status      0\n",
-              "Language_Proficiency    0\n",
-              "Disability_Status       0\n",
-              "Criminal_Record         0\n",
-              "Zip_Code_Group          0\n",
-              "dtype: int64"
-            ]
-          },
-          "execution_count": 3,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "df1 = pd.read_csv(\"dataset/test.csv\", encoding='latin1')\n",
-        "# Check if the DataFrame has empty values\n",
-        "df1.isnull().sum()"
       ]
     },
     {
